gccida/c2/store_expr
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_expr/src/expr.c:4391:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v13; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_expr/src/expr.c:4392:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_expr/src/expr.c:4408:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v30; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_expr/src/expr.c:4417:4: error: expected ';' after expression
rtx v40; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_expr/src/expr.c:4417:5: error: use of undeclared identifier 'v40'
rtx v40; // rdx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_expr/src/expr.c:4419:4: error: expected ';' after expression
rtx k; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_expr/src/expr.c:4419:5: error: use of undeclared identifier 'k'
rtx k; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_expr/src/expr.c:4422:4: error: expected ';' after expression
rtx m; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_expr/src/expr.c:4422:5: error: use of undeclared identifier 'm'
rtx m; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_expr/src/expr.c:4425:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v48; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_expr/src/expr.c:4426:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v49; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_expr/src/expr.c:4427:4: error: expected ';' after expression
rtx v50; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_expr/src/expr.c:4427:5: error: use of undeclared identifier 'v50'
rtx v50; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_expr/src/expr.c:4432:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v55; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_expr/src/expr.c:4435:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tree; // r13 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_expr/src/expr.c:4436:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v59; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_expr/src/expr.c:4437:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v60; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_expr/src/expr.c:4439:4: error: expected ';' after expression
rtx v62; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_expr/src/expr.c:4439:5: error: use of undeclared identifier 'v62'
rtx v62; // r13 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_expr/src/obj/expr.o] Error 1
